--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,8 @@
 name: ViewerForge
-main: org.novato.viewerForge.ViewerForge
 version: 1.1
-api-version: 1.21
+main: org.novato.viewerForge.ViewerForge
+commands:
+  viewerforge:
+    description: ViewerForge commands
+    usage: /<command>
+    aliases: [vf]
